denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: <your-namespace>
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
