nspossible.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace-traffic
  namespace: <your-namespace>
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
