service-b.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-b-from-c-and-d
  namespace: <your-namespace>
spec:
  podSelector:
    matchLabels:
      app: service-b
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: service-c
    - podSelector:
        matchLabels:
          app: service-d
  policyTypes:
  - Ingress
